--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.1.4",
+        "admin-lte": "^3.2.0",
+        "vue": "^3.5.12"
     }
 }
